# multiagent

./: .dockerignore  .gitignore  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
docs/: LAYERS.md  LAYER_ONE.md  PLAN.md  RUNNING_TESTS.md  TEAM_TOML.md
git_multiagent/: auth_proxy.py  auth_relay.py  cli.py  dashboard.py  runner.py
git_multiagent/runtime/tools/: README.md  agent  agent-input  agent-pi-interactive  git-multiagent-ui  heartbeat
git_multiagent/templates/: AGENTS.md
git_multiagent/templates/roles/: planner.md
man/: multiagent.1
multiagent/: auth_proxy.py  auth_relay.py  cli.py  dashboard.py  runner.py  system.py
multiagent/docker_context/: Dockerfile  entrypoint.sh  pyproject.toml
multiagent/runtime/tools/: README.md  agent  agent-input  agent-pi-interactive  agent_input.py  heartbeat  multiagent-ui
multiagent/runtime/tools/multiagent-public/: app.js  index.html  styles.css
multiagent/templates/: AGENTS.md  team.toml
multiagent/templates/teams/: isa-migration.toml
tests/: test_cli.py  test_packaging.py  test_runner.py  test_system.py
