[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-multiagent"
version = "0.2.0"
description = "Git-native coding agent workflow extension"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "git-multiagent contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
multiagent = "git_multiagent.cli:main"

[project.urls]
Homepage = "https://github.com/glguida/git-multiagent"
Repository = "https://github.com/glguida/git-multiagent"

[tool.setuptools.packages.find]
include = ["git_multiagent*"]

[tool.setuptools.package-data]
git_multiagent = [
  "templates/AGENTS.md",
  "templates/roles/*.md",
  "templates/team.toml",
  "runtime/bin/*",
  "runtime/tools/*",
  "runtime/tools/git-multiagent-public/*",
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/multiagent.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
