[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiagent"
version = "0.2.0"
description = "Git-native coding agent workflow extension"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "multiagent contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
multiagent = "multiagent.cli:main"

[project.urls]
Homepage = "https://github.com/glguida/multiagent"
Repository = "https://github.com/glguida/multiagent"

[tool.setuptools.packages.find]
include = ["multiagent*"]

[tool.setuptools.package-data]
multiagent = [
  ".dockerignore",
  "templates/AGENTS.md",
  "templates/roles/*.md",
  "templates/team.toml",
  "templates/teams/*.toml",
  "runtime/bin/*",
  "runtime/tools/*",
  "runtime/tools/multiagent-public/*",
  "docker_context/*",
]

[tool.setuptools.data-files]
"share/man/man1" = ["man/multiagent.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
